<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTransactionFragment">

    <Button
        android:id="@+id/buttonEditTransactionOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline25" />

    <EditText
        android:id="@+id/editTextEditTransactionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline25"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditTransactionDate"
        app:layout_constraintStart_toStartOf="@+id/editTextEditTransactionDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTransactionDate"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEditTransactionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditTransactionDate"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditTransactionCategoryName"
        app:layout_constraintStart_toStartOf="@+id/editTextEditTransactionCategoryName"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTransactionCategoryName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_transaction"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <EditText
        android:id="@+id/editTextEditTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditTransactionDescription"
        app:layout_constraintEnd_toEndOf="@+id/editTextEditTransactionAmount"
        app:layout_constraintStart_toStartOf="@+id/editTextEditTransactionAmount"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditTransactionAmount"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextEditTransactionCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextEditTransactionAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline26"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>